--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -1,3 +1,14 @@
-// Place all the styles related to the top controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+div#canvas {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  background-color: silver;
+  
+  div.block {
+    position: absolute;
+    width: 78px;
+    height: 78px;
+    border: 2px solid black;
+    background-color: gray;
+  }
+}
