--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -9,7 +9,7 @@ div#canvas {
     width: 78px;
     height: 78px;
     border: 2px solid black;
-    background-color: gray;
+    background-color: pink;
     cursor: pointer;
   }
 }
