--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,1 +1,7 @@
-<div id="canvas"></div>
+<div id="canvas">
+  <% @blocks.each do |block| %>
+  <%= content_tag(:div, nil, class: "block",
+      data: { :"block-id" => block.id },
+      style: "left: #{block.x}px; top: #{block.y}px") %>
+  <% end %>
+</div>
