--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,6 +1,6 @@
 <div id="canvas">
   <% @blocks.each do |block| %>
-  <%= content_tag(:div, nil, class: "block",
+  <%= image_tag("rails.png",
       data: { :"block-id" => block.id },
       style: "left: #{block.x}px; top: #{block.y}px") %>
   <% end %>
